--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -11,7 +11,10 @@ name = "neon_test_output_example"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-neon-build = "0.3.3"
+neon-build = { git = "https://github.com/neon-bindings/neon/" }
 
 [dependencies]
-neon = "0.3.3"
+neon = { git = "https://github.com/neon-bindings/neon/", features = ["default-panic-hook"] }
+
+[features]
+default-panic-hook = []
